apps/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: goodfood-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api.c-mbk.fr
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/restaurants
            pathType: Prefix
            backend:
              service:
                name: franchise-service
                port:
                  number: 80
          - path: /api/franchise
            pathType: Prefix
            backend:
              service:
                name: franchise-service
                port:
                  number: 80
          - path: /api/menu
            pathType: Prefix
            backend:
              service:
                name: menu-service
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /api/reservations
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 80
          - path: /api/deliveries
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 80
          - path: /api/stocks
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
          - path: /api/replenishment-requests
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 80
